test/compiler/pass/_anon_in_scope.ods
do anon = 42
do () -> return "Hello, world!"
do print(anon)
