test/compiler/fail/_call_nonfunction.ods
do f = 5
do f("Hello, world!")
